--- a/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
@@ -34,7 +34,7 @@
                 <a class="btn default-line" href="/board-admin/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
-        <div class="list" id="boardCategoryList"></div>
+        <div class="category-list" id="boardCategoryList"></div>
     </div>
 </th:block>
 </body>
