--- a/src/main/resources/public/template/boardAdmin/boardCategoryList.html
+++ b/src/main/resources/public/template/boardAdmin/boardCategoryList.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
->
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 </head>
 <body>
-    <table>
-        <thead>
-        <tr>
+    <table class="edit-table">
+        <thead class="edit-table-head">
+        <tr class="align-left">
             <th width="60%" th:text="#{board.label.categoryName}"></th>
             <th width="30%" th:text="#{board.label.order}"></th>
             <th width="10%"></th>
