--- a/src/main/resources/public/src/scss/theme/default/_buttons.scss
+++ b/src/main/resources/public/src/scss/theme/default/_buttons.scss
@@ -12,25 +12,28 @@ button {
   // 커스텀 코드 + 버튼
   &.plus {
     padding: 0;
+    width: 1.625rem; // 26px
+    height: 1.625rem; // 26px
   }
   // + 버튼
   // 돋보기 아이콘
   .icon-search {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_search.svg', 18px, 18px, no-repeat, center, 18px 18px, $gray);
+    @include maskImage('#{$icon-folder-path}icon_search.svg', 1.625rem, 1.625rem, no-repeat, center, 1.625rem 1.625rem, $gray); // 18px 18px
   }
   // 편집 아이콘
   .icon-edit {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_edit.svg', 20px, 20px, no-repeat, center, 20px 20px, $dark-gray);
+    @include maskImage('#{$icon-folder-path}icon_edit.svg', 1.25rem, 1.25rem, no-repeat, center, 1.25rem 1.25rem, $dark-gray); // 20px 20px
   }
   // 삭제 아이콘
   .icon-delete {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_delete.svg', 18px, 20px, no-repeat, center, 18px 20px, $dark-gray);
+    @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.625rem, 1.25rem, no-repeat, center, 1.625rem 1.25rem, $dark-gray); // 18px 20px
   }
+  // 추가 아이콘
   .icon-plus {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_plus.svg', 24px, 24px, no-repeat, center, 20px 20px, $pressed-gray);
+    @include maskImage('#{$icon-folder-path}icon_plus.svg', 1.5rem, 1.5rem, no-repeat, center, 0.875rem 0.875rem, $pressed-gray); // 24px 24px 14px 14px
   }
 }
