--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -43,12 +43,13 @@ input {
     padding-right: 1.875rem; // 30px
   }
   &.search-datetime {
-    background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
+    background: url($icon-folder-path + "icon_date_time.svg") no-repeat 100%-5 50%;
     background-color: $element-bg-color;
   }
   &.search-date {
     background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
     background-color: $element-bg-color;
+    &:disabled { background-color: $light-gray; }
   }
   &.search-time {
     background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
@@ -61,6 +62,11 @@ input {
   &.px {
     background: url($icon-folder-path + "icon_px.svg") no-repeat calc(100% - 10px) 50%;
     background-color: $element-bg-color;
+  }
+  &.mb {
+    background: url($icon-folder-path + "icon_mb.svg") no-repeat calc(100% - 10px) 50%;
+    background-color: $element-bg-color;
+    &:disabled { background-color: $light-gray; }
   }
 }
 
