--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -6,61 +6,83 @@
  * @version 1.0
  */
 .contents-edit {
-    @include contents-template();
-    @include edit-template();
-    .btn-list {
-        padding: 2.5rem 0 3.125rem 0; // 40px 0 50px 0
+  @include contents-template();
+  @include edit-template();
+  .btn-list {
+    padding: 2.5rem 0 3.125rem 0; // 40px 0 50px 0
+  }
+  .image {
+    &-header {
+      padding-bottom: 0.625rem;
     }
-    .image-list {
-        padding: 3.125rem 3.75rem 2.875rem 3.75rem;
+    &-list {
+      padding: 3.125rem 3.75rem 2.875rem 3.75rem;
     }
-    .category-list {
-        width: 61.25rem;
-        margin: auto;
-        .edit-table {
-            width: 100%;
-            head {
-                display: block;
-                & > tr {
-                    height: 2.375rem; // 38px
-                    border-bottom: .125rem solid $default-gray;
-                    display: flex;
-                    th {
-                        @include h4();
-                        // vertical-align: middle;
-                        // text-align: left;
-                        &:first-child {
-                            padding-left: 1.25rem; // 20px
-                        }
-                    }
-                }
+  }
+  .under-bar { border-bottom: 0.0625rem solid $default-gray; } // 1px
+
+  // 커스텀 코드
+  .custom-code-edit {
+    .condition { width: 28.3125rem; } // 453px
+    .equal { padding: 0 0.3125rem; } // 0 5px
+    .minus { padding: 0.5625rem 0.8125rem; } // 9px 13px
+    .icon-delete { background: $pressed-gray; }
+  }
+
+  // 사용자 정보 수정
+  .user-edit {
+    .switch { margin-top: 0.9375rem; } // 15px 
+  }
+
+  /* 
+   * #9067 일감 완료 후 다시 확인합니다. 
+   * 해당 클래스가 사용되는 카테고리 관리 화면은 추후 게시판 관리 페이지에 합쳐질 예정입니다.
+   */
+  .category-list {
+    width: 61.25rem;
+    margin: auto;
+    .edit-table {
+      width: 100%;
+      head {
+        display: block;
+        & > tr {
+          height: 2.375rem; // 38px
+          border-bottom: .125rem solid $default-gray;
+          display: flex;
+          th {
+            @include h4();
+            &:first-child {
+              padding-left: 1.25rem; // 20px
             }
-            tbody {
-                display: block;
-                overflow-y: auto;
-                width: 100%;
-                tr {
-                    height: 2.875rem;
-                    width: 100%;
-                    display: table;
-                    &:hover {
-                        background: $line-gray;
-                    }
-                    &.active {
-                        td {
-                            color: $dark-blue;
-                            background: $line-gray;
-                        }
-                    }
-                    td {
-                        @include h5();
-                        vertical-align: middle;
-                        &:first-child {
-                            padding-left: 1.25rem; // 20px
-                        }
-                    }
-                }
-            }
+          }
         }
+      }
+      tbody {
+        display: block;
+        overflow-y: auto;
+        width: 100%;
+        tr {
+          height: 2.875rem;
+          width: 100%;
+          display: table;
+          &:hover {
+            background: $line-gray;
+          }
+          &.active {
+            td {
+              color: $dark-blue;
+              background: $line-gray;
+            }
+          }
+          td {
+            @include h5();
+            vertical-align: middle;
+            &:first-child {
+              padding-left: 1.25rem; // 20px
+            }
+          }
+        }
+      }
     }
+  }
 }
