--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -132,6 +132,8 @@
             document.getElementById('boardAdminId').addEventListener('change', function() {
                 restSubmit('get', '/rest/board-admin/'+this.value+'/view', '');
             });
+
+            OverlayScrollbars(document.querySelectorAll('.scroll-wrap'), {className: 'scrollbar'});
         };
 
         function initTextEditor(flag) {
