--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -15,7 +15,7 @@
                 <h6 class="title-description" th:text="#{customCode.label.customCode}"></h6>
             </div>
         </div>
-        <div class="edit">
+        <div class="custom-code-edit edit">
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.name}" for="customCodeName"></label>
                 <input type="text" id="customCodeName" required="required" maxlength="110"
@@ -23,7 +23,7 @@
             </div>
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.type}"></label>
-                <div class="flex-row">
+                <div class="flex-row mr-auto">
                     <label class="radio" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
@@ -62,7 +62,7 @@
                     <select id="valueColumn"></select>
                 </div>
                 <div class="form-set">
-                    <div class="flex-row">
+                    <div class="flex-row under-bar">
                         <label id="conditionLabel" th:text="#{customCode.label.condition}"></label>
                         <button class="default-line plus" onclick="addCondition()">
                             <span class="icon-plus"></span>
@@ -182,7 +182,7 @@
             const divRow = document.createElement('div');
             divRow.classList.add('row');
             const keySelect = document.createElement('select');
-            keySelect.classList.add('col-4');
+            keySelect.classList.add('condition');
             const searchColumn = document.getElementById('searchColumn');
             for (let i = 0; i < searchColumn.length; i++) {
                 let option = searchColumn[i].cloneNode(true);
@@ -191,21 +191,25 @@
             }
             const equalSpan = document.createElement('span');
             equalSpan.textContent = '=';
+            equalSpan.classList.add('equal');
             const valueInput = document.createElement('input');
-            valueInput.classList.add('col-7');
+            valueInput.classList.add('condition');
             valueInput.type = 'text';
             valueInput.name = 'conditionValue';
             valueInput.maxLength = 100;
             valueInput.value = (typeof param !== 'undefined') ? param.value : '';
-            const minusBtn = document.createElement('button');
-            minusBtn.classList.add('minus');
-            minusBtn.addEventListener('click', function () {
+            const deleteBtn = document.createElement('button');
+            deleteBtn.classList.add('minus');
+            const deleteIcon = document.createElement('span');
+            deleteIcon.classList.add('icon-delete');
+            deleteBtn.appendChild(deleteIcon);
+            deleteBtn.addEventListener('click', function () {
                 aliceJs.confirmIcon(i18n.msg('customCode.msg.confirmDeleteCondition'), function () {
                     const conditionElems = document.querySelectorAll('input[name=conditionValue]');
                     if (conditionElems.length === 1) {
                         document.getElementById('conditionLabel').classList.remove('required');
                     }
-                    minusBtn.parentNode.parentNode.remove();
+                    deleteBtn.parentNode.parentNode.remove();
 
                 }, null);
             });
@@ -213,7 +217,7 @@
             divRow.appendChild(keySelect);
             divRow.appendChild(equalSpan);
             divRow.appendChild(valueInput);
-            divRow.appendChild(minusBtn);
+            divRow.appendChild(deleteBtn);
             divFormSet.appendChild(divRow);
             document.getElementById('condition').appendChild(divFormSet);
         }
