--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -14,7 +14,7 @@
                 <h6 class="title-description" th:text="#{customCode.label.customCode}"></h6>
             </div>
         </div>
-        <div class="edit">
+        <div class="custom-code-edit edit">
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.name}" for="customCodeName"></label>
                 <input type="text" id="customCodeName" required="required" maxlength="100"
@@ -22,7 +22,7 @@
             </div>
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.type}"></label>
-                <div class="flex-row">
+                <div class="flex-row mr-auto">
                     <label class="radio" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
@@ -55,7 +55,9 @@
                     <input th:value="|${customCode.valueColumnName}(${customCode.valueColumn})|" disabled />
                 </div>
                 <div class="form-set">
-                    <label th:text="#{customCode.label.condition}"></label>
+                    <div class="flex-row under-bar">
+                        <label th:text="#{customCode.label.condition}"></label>
+                    </div>
                     <div id="condition"></div>
                 </div>
             </div>
