--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -33,7 +33,8 @@
                 </div>
                 <div class="form-set">
                     <label class="required" th:text="#{common.label.contents}" for="faqContent"></label>
-                    <textarea id="faqContent" name="faqContent" th:text="${faq?.faqContent}" rows="11"></textarea>
+                    <textarea id="faqContent" name="faqContent" th:text="${faq?.faqContent}"
+                              maxlength="2048" rows="7" class="textarea-scroll-wrapper"></textarea>
                 </div>
                 <div class="btn-list">
                     <button type="button" class="point-fill" id="btnRegist" sec:authorize="hasAuthority('faq.create')"
@@ -106,6 +107,16 @@
                     aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
                 });
             }
+            OverlayScrollbars(document.querySelectorAll('#faqContent'), {
+                className: 'scrollbar',
+                resize: 'vertical',
+                sizeAutoCapable: true,
+                textarea: {
+                    dynHeight: false,
+                    dynWidth: false,
+                    inheritedAttrs: "class"
+                }
+            });
         };
         /*]]>*/
     </script>
