--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -106,6 +106,10 @@ $toastify-icon-size:                          6.25rem; // 100px
 $tree-modal-width:                            40rem; // 640px
 $tree-modal-height:                           44.19rem; // 707px
 
+//////////////////////////// IMPORT / EXPORT //////////////////////
+$import-modal-width:                          37.5rem; // 600px
+$import-modal-height:                         37.5rem; // 600px
+
 /////////////////////////// contents //////////////////////////////
 $token-list-background-color: $white;
 $token-list-topic-color: $dark-gray;
