--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -8,9 +8,7 @@
 .contents-edit {
   @include contents-template();
   @include edit-template();
-  .btn-list {
-    padding: 2.5rem 0 3.125rem 0; // 40px 0 50px 0
-  }
+  .btn-list { padding: 2.5rem 0 3.125rem 0; } // 40px 0 50px 0
   .image {
     &-header {
       padding-bottom: 0.625rem;
@@ -35,7 +33,7 @@
   }
 
   /* 
-   * #9067 일감 완료 후 다시 확인합니다. 
+   * #9067 일감 완료 후 삭제 또는 수정 여부를 확인합니다.
    * 해당 클래스가 사용되는 카테고리 관리 화면은 추후 게시판 관리 페이지에 합쳐질 예정입니다.
    */
   .category-list {
