--- a/src/main/resources/public/template/form/formAdminSearch.html
+++ b/src/main/resources/public/template/form/formAdminSearch.html
@@ -143,7 +143,7 @@
                        `<label class="field-label" for="form_description">${i18n.msg('form.label.description')}</label>` +
                        `<textarea rows="3" class="textarea-scroll-wrapper" id="form_description" maxlength="256"></textarea>` +
                        `<div class="file-uploader-edit">` +
-                           `<label class="file-uploader-title">${i18n.msg('form.label.importFile')}<span class="required"></span></label>` +
+                           `<label class="file-uploader-title field-label">${i18n.msg('form.label.importFile')}<span class="required"></span></label>` +
                            `<div id="dropZoneFiles"></div>` +
                            `<div id="dropZoneUploadedFiles"></div>` +
                        `</div>` +
