--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -409,3 +409,8 @@ $tooltip-contents-box-shadow:                0 0 0.3125rem 0 rgba(30, 47, 63, 0.
 
 /////////////////////////////// designed select ///////////////////////////////
 $select-bg-color: rgba(0, 152, 255, 0.08);
+
+//////////////////////////////////// common ///////////////////////////////////
+$vertical-bar-width:                         1.875rem; // 30px
+$vertical-bar-height:                        1.875rem; // 30px
+$vertical-bar-margin:                        0 1.875rem 0 0; // 0 30px 0 0
