--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -115,3 +115,8 @@ $token-list-border:                           0.0625rem solid $line-gray;
 $token-dashbaord-background-color:            $white;
 $token-dashbaord-header-color:                $light-gray;
 $token-dashbaord-border:                      0.0625rem solid $line-gray;
+
+//////////////////////////// common //////////////////////////////
+$vertical-bar-width:                          1.25rem; // 20px
+$vertical-bar-height:                         1.25rem; // 20px
+$vertical-bar-margin:                         0.0625rem 0.9375rem 0.0625rem 0; // 1px 5px 1px 0
