--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -18,7 +18,7 @@
       padding: 3.125rem 3.75rem 2.875rem 3.75rem;
     }
   }
-  .under-bar { border-bottom: 0.0625rem solid $default-gray; } // 1px
+  .flex-row { margin-bottom: 3.125rem; }
 
   // 커스텀 코드
   .custom-code-edit {
