--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="flex flex-column">
-            <h4 class="under-bar">
+            <h4 class="under-bar bold">
                 <span th:if="${boardAdminInfo.categoryYn}" th:text="'['+${boardInfo?.boardCategoryName}+']'"></span>
                 <span th:text="${boardInfo?.boardTitle}"></span>
             </h4>
