--- a/src/main/resources/public/template/document/documentDisplay.html
+++ b/src/main/resources/public/template/document/documentDisplay.html
@@ -9,7 +9,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="edit">
-        <h3 class="under-bar" th:text="#{document.label.display}"></h3>
+        <h3 class="under-bar bold" th:text="#{document.label.display}"></h3>
         <div class="table-set">
             <table id="documentDisplay">
                 <thead>
