--- a/src/main/resources/public/template/form/formAdminView.html
+++ b/src/main/resources/public/template/form/formAdminView.html
@@ -8,7 +8,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="edit">
-        <h3 class="under-bar" th:text="#{form.label.detail}"></h3>
+        <h3 class="under-bar bold" th:text="#{form.label.detail}"></h3>
         <div class="form-set">
             <label th:text="#{form.label.name}"></label>
             <span id="form_name" th:text="${formInfo?.name}"/>
