--- a/src/main/resources/public/template/token/tokenPopUp.html
+++ b/src/main/resources/public/template/token/tokenPopUp.html
@@ -8,7 +8,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="related-instance-header">
-        <h3 class="under-bar" th:text="#{token.label.relatedInstance}"></h3>
+        <h3 class="under-bar bold" th:text="#{token.label.relatedInstance}"></h3>
     </div>
     <div class="related-instance-main">
         <input class="search col-5" type="text" name="search" id="search"
