--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -362,7 +362,18 @@ input, button, select, optgroup, textarea {
   width: 1.875rem;
   min-height: 1.875rem;
   border-right: 0.0625rem solid #EBEBEB;
-  margin-right: 1.875rem;
+  margin: 0 1.875rem 0 0;
+  vertical-align: middle;
+}
+
+.under-bar {
+  border-bottom: 0.0625rem solid #E1E3E6;
+  padding-bottom: 0.625rem;
+  margin-bottom: 0.625rem;
+}
+
+.under-bar .bold {
+  border-bottom: 0.125rem solid #E1E3E6;
 }
 
 /* _fonts.scss 
@@ -2510,7 +2521,7 @@ button .icon-plus {
   display: flex;
   flex-direction: column;
   background-color: white;
-  /* 
+  /*
    * #9067 일감 완료 후 삭제 또는 수정 여부를 확인합니다.
    * 해당 클래스가 사용되는 카테고리 관리 화면은 추후 게시판 관리 페이지에 합쳐질 예정입니다.
    */
@@ -2640,11 +2651,11 @@ button .icon-plus {
 }
 
 .itsm-container .contents-edit .image-list {
-  padding: 2.5rem 3.125rem 2.5rem 3.125rem;
+  padding: 3.125rem 3.75rem 2.875rem 3.75rem;
 }
 
-.itsm-container .contents-edit .under-bar {
-  border-bottom: 0.0625rem solid #E1E3E6;
+.itsm-container .contents-edit .flex-row {
+  margin-bottom: 3.125rem;
 }
 
 .itsm-container .contents-edit .custom-code-edit .condition {
@@ -2681,9 +2692,9 @@ button .icon-plus {
 }
 
 .itsm-container .contents-edit .category-list .edit-table head > tr {
+  display: flex;
   height: 2.375rem;
   border-bottom: 0.125rem solid #E1E3E6;
-  display: flex;
 }
 
 .itsm-container .contents-edit .category-list .edit-table head > tr th {
@@ -2698,14 +2709,14 @@ button .icon-plus {
 
 .itsm-container .contents-edit .category-list .edit-table tbody {
   display: block;
-  overflow-y: auto;
   width: 100%;
+  overflow-y: auto;
 }
 
 .itsm-container .contents-edit .category-list .edit-table tbody tr {
-  height: 2.875rem;
-  width: 100%;
   display: table;
+  width: 100%;
+  height: 2.875rem;
 }
 
 .itsm-container .contents-edit .category-list .edit-table tbody tr:hover {
@@ -3021,9 +3032,9 @@ button .icon-plus {
 }
 
 .itsm-container .contents-tree-edit > .tree-area {
-  padding: 2.875rem 3.75rem 6.875rem 3.75rem;
   height: 100vh;
   flex: 1;
+  padding: 2.875rem 3.75rem 6.875rem 3.75rem;
 }
 
 .itsm-container .contents-tree-edit > .tree-area .list {
@@ -3112,8 +3123,8 @@ button .icon-plus {
 }
 
 .itsm-container .contents-tree-edit > .edit-area {
-  padding: 9.625rem 2.1875rem 3.125rem 0;
   width: 65.625rem;
+  padding: 9.625rem 2.1875rem 3.125rem 0;
   background: #ffffff;
   font-weight: 500;
 }
@@ -3233,13 +3244,6 @@ button .icon-plus {
   height: 0.0625rem;
   margin: 0.625rem 0;
   background-color: #EBEBEB;
-}
-
-.vertical-bar {
-  width: 1.875rem;
-  border-right: 0.0625rem solid #EBEBEB;
-  margin-right: 1.875rem;
-  min-height: 1.875rem;
 }
 
 .flex-row {
@@ -3822,12 +3826,6 @@ button .icon-plus {
   20% {
     transform: scale(1);
   }
-}
-
-.vertical-bar {
-  width: 1.875rem;
-  border-right: 0.0625rem solid #EBEBEB;
-  margin-right: 1.875rem;
 }
 
 .horizontal-bar {
@@ -5007,7 +5005,7 @@ body.modal-active {
 }
 
 .modal-wrapper .modal-dialog .modal-content {
-  height: calc(25.63rem - 3.375rem - 5rem);
+  height: calc(22.5rem - 3.375rem - 5rem);
   border-bottom: 0.0625rem solid #EBEBEB;
   overflow: auto;
 }
@@ -5816,13 +5814,6 @@ body.modal-active {
 .reply-list {
   padding: 0 1.25rem;
   border-bottom: 0.0625rem solid #EBEBEB;
-}
-
-.reply-list .vertical-bar {
-  width: 1.25rem;
-  height: 1.25rem;
-  margin: 0.0625rem 1.25rem 0.0625rem 0;
-  vertical-align: middle;
 }
 
 .reply-list .reply-info {
