--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -12,7 +12,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="edit">
-        <h3 class="under-bar" th:text="#{form.label.customCodeTarget}"></h3>
+        <h3 class="under-bar bold" th:text="#{form.label.customCodeTarget}"></h3>
         <div class="form-set">
             <input type="text" id="search" th:placeholder="#{customCode.msg.enterSearchTerm}">
         </div>
