--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="flex flex-column">
-            <h4 class="under-bar" th:text="#{${download.downloadTitle}}"></h4>
+            <h4 class="under-bar bold" th:text="#{${download.downloadTitle}}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${download?.createDt}"></span>
                 <span class="vertical-bar"></span>
