--- a/src/main/resources/public/template/form/formImport.html
+++ b/src/main/resources/public/template/form/formImport.html
@@ -9,7 +9,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="edit">
-        <h3 class="under-bar" th:text="#{form.label.import}"></h3>
+        <h3 class="under-bar bold" th:text="#{form.label.import}"></h3>
         <div class="form-set">
             <label class="required" th:text="#{form.label.name}" for="form_name"></label>
             <input type="text" id="form_name" maxlength="50" required="required" tabindex="1"/>
