--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="flex flex-column">
-            <h4 class="under-bar" th:text="${notice?.noticeTitle}"></h4>
+            <h4 class="under-bar bold" th:text="${notice?.noticeTitle}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${notice.createDt}"></span>
                 <span class="vertical-bar"></span>
